изменения табл. 1,2, литература

--- a/wsd_part1/wsd_part1.tex
+++ b/wsd_part1/wsd_part1.tex
@@ -140,18 +140,18 @@ $p(F_1, F_2, \ldots , F_nS) = p(S)\Pi^n_{i=1}p(F_i \vee S)$
 \begin{table}[H]
 \centering
 \caption{„исло употреблений слова \textit{line} (столбец \textit{count}) дл€ шести наиболее часто встречаемых значений (значени€ из те\-за\-уру\-са WordNet, столбец \textit{sense}) по данным корпусов \textit{ACL/DCI Wall Street Journal и American Printing House for the Blind}}
-\begin{tabular}{|c|c|}
+\begin{tabular}{| m{5.5cm} |c |}
 \hline
-sense & count\\
+{\bf «начение} &{\bf „астота}\\ 
 \hline
-product & 2218\\
-written or spoken text & 405\\
-telephone connection & 429\\
-formation of people or things; queue & 349\\
-an artificial division; boundary & 376\\
+product & 2218\\  \hline
+written or spoken text & 405\\  \hline
+telephone connection & 429\\  \hline
+formation of people or things;  queue & 349\\ \hline   
+an artificial division; boundary & 376\\   \hline
 a thin, flexible object; cord & 371\\
 \hline
-total & 4148\\
+{\bf ¬сего} & 4148\\
 \hline
 \end{tabular}
 \label{tbl3}
@@ -160,18 +160,18 @@ total & 4148\\
 \begin{table}[H]
 \centering
 \caption{„исло употреблений слова \textit{interest} (столбец \textit{count}) дл€ шести наиболее часто встречаемых значений (значени€ из словар€ Longman Dictionary of Contemporary English, столбец \textit{sense}). Ётот набор данных был получен в 1994 году Ѕрюсом и ¬иебе \cite{Bruce 1994} путем указани€ значений дл€ всех вхождений слова \textit{interest} в корпус ACL/DCI Wall Street Journal}
-\begin{tabular}{|c|c|}
+\begin{tabular}{| m{5.5cm} | c |}
 \hline
-sense & count\\
+{\bf «начение} &{\bf „астота}\\ 
 \hline
-money paid for the use of money & 1252\\
-a share in a company or business & 500\\
-readiness to give attention & 361\\
-advantage, advancement or favor & 178\\
-activity that one gives attention to & 66\\
+money paid for the use of money & 1252\\ \hline
+a share in a company or business & 500\\ \hline
+readiness to give attention & 361\\ \hline
+advantage, advancement or favor & 178\\ \hline
+activity that one gives attention to & 66\\ \hline
 causing attention to be given to & 11\\
 \hline
-total & 2368\\
+{\bf ¬сего} & 2368\\
 \hline
 \end{tabular}
 \label{tbl4}
@@ -710,7 +710,7 @@ $R = \emptyset$ // $R$ --- это множество остатков, то есть элементов, не охвачен
 {$e \in E$}
 %{\ForEach
 %{$c \in C$}
-{\If{$sim(e,$ foreach  $c \in C) < \theta_2$ //  сходство по всем комитетам из $C$ меньше $\theta_2$ }
+{\If{$sim(e,$ foreach  $c \in C) < \theta_2$ //  сходство по всем комитетам из $C$ меньше $\theta_2$ // }
 {$R += e$ // то следует добавить $e$ в список остатков $R$.}
 %}
 }
@@ -1084,22 +1084,22 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Abney S. and Light M.} Hiding a semantic hierarchy in a markov model. In Proceedings of the Workshop on Unsupervised Learning in Natural Language Processing, ACL. 1999.
 
 \bibitem{Azzini}
-\textit{Azzini A., da Costa Pereira C., Dragoni M. and Tettamanzi A. G. B.} Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona, 2008. pp. 332Ц337. doi: 10.1109/HIS.2008.88
+\textit{Azzini A., da Costa Pereira C., Dragoni M. and Tettamanzi A. G. B.} Evolving Neural Networks for Word Sense Disambiguation // 8-th International conference on hybrid intelligent systems. Spain. Barcelona, 2008. P. 332Ц337. doi: 10.1109/HIS.2008.88
 
 \bibitem{Barzilay Elhadad 1997}
-\textit{Barzilay R. and  Elhadad M. }Using lexical chains for text summarization. In Proceedings of the ACL Workshop on Intelligent Scalable Text Summarization (Madrid, Spain). 1997. pp. 10Ц17.
+\textit{Barzilay R. and  Elhadad M. }Using lexical chains for text summarization // In Proceedings of the ACL Workshop on Intelligent Scalable Text Summarization (Madrid, Spain). 1997. P. 10Ц17.
 
 \bibitem{Berry 1993}
 \textit{Berry M.,  Do T.,  OТBrien G.,  Krishna V. and Varadhan S. }SVDPACK (version 1.0) userТs guide. Technical Report CS-93-194, University of Tennessee at Knoxville, Computer Science Department, April 1993.
 
 \bibitem{Bruce 1994}
-\textit{Bruce R. and  Wiebe J. }Word-sense disambiguation using decomposable models. In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994. pp. 139Ц146. doi: 10.3115/981732.981752
+\textit{Bruce R. and  Wiebe J. }Word-sense disambiguation using decomposable models // In Proceedings of the 32nd Annual Meeting of the Association for Computational Linguistics, 1994. P. 139Ц146. doi: 10.3115/981732.981752
 
 \bibitem{Ciaramita 2000}
 \textit{Ciaramita M. and  Johnson M. }Explaining away ambiguity: Learning verb selectional preference with Bayesian networks. 2000. 
 
 \bibitem{COTTRELL 1983}
-\textit{Cottrell G. W. and  Small S. L. }A connectionist  scheme for modelling word  sense  disambiguation // Cognition and brain theory. 1983. є 6. pp. 89Ц120. 
+\textit{Cottrell G. W. and  Small S. L. }A connectionist  scheme for modelling word  sense  disambiguation // Cognition and brain theory. 1983. є 6. P. 89Ц120. 
 
 \bibitem{COTTRELL 1989}
 \textit{Cottrell G. W. }A connectionist approach to word sense disambiguation / Pitman, London, 1989.
@@ -1108,7 +1108,7 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Duong D. T. }Automated text summarization. Graduation Thesis. Hanoi University. 2011. 
 
 \bibitem{Donald 1990}
-\textit{Hindle D. }Noun classification from predicate-argument structures // In Proceedings of ACL-90, Pittsburg, Pennsylvania, June, 1990. pp. 268-275.
+\textit{Hindle D. }Noun classification from predicate-argument structures // In Proceedings of ACL-90, Pittsburg, Pennsylvania, June, 1990. P. 268-275.
 
 %\bibitem{Charles 1993}
 %\textit{Ling Charles X.,  Marinov M. }Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  %Cognition, Elsevier, 1993.
@@ -1141,7 +1141,7 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Halliday M. and  Hasan R. }Cohesion in English / London: Longman. 1976. 
 
 \bibitem{Harris 1985}
-\textit{Harris Z. }Distributional structure. In: Katz, J. J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press. 1985. P. 26Ц47
+\textit{Harris Z. }Distributional structure / In: Katz, J. J. (ed.) The Philosophy of Linguistics. New York: Oxford University Press. 1985. P. 26Ц47
 
 \bibitem{Hearst 1994}
 \textit{Hearst M. }Multi-paragraph segmentation of expository text // In Proceedings of the 32th Annual Meeting of the Association for Computational Linguistics, 9Ц16. Las Cruces, New Mexico: Association for Computational Linguistics. 1994. doi: 10.3115/981732.981734
@@ -1162,33 +1162,33 @@ $Score(Chain) > Average(Scores) + 2 \times StandardDeviation(Scores)$
 \textit{Jain A.,  Murthy M. and  Flynn P. }Data clustering: a review // ACM Computing Surveys, 31(3):264-323, September 1999. doi: 10.1145/331499.331504
 
 \bibitem{Leacock 1993}
-\textit{Leacock C.,  Towell G. and  VoorheesE. }Corpus-based statistical sense resolution // In Proceedings of the ARPA Workshop on Human Language Technology, March. 1993, pp. 260Ц265.  
+\textit{Leacock C.,  Towell G. and  VoorheesE. }Corpus-based statistical sense resolution // In Proceedings of the ARPA Workshop on Human Language Technology, March. 1993, P. 260Ц265.  
 
 \bibitem{LESK 1986}
-\textit{Lesk M. }Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone //  Proceedings  of  the 5th SIGDOC. New York. 1986. pp. 24Ц26. doi: 10.1145/318723.318728
+\textit{Lesk M. }Automatic sense disambiguation using machine readable dictionaries: How to tell a pine cone from an ice cream cone //  Proceedings  of  the 5th SIGDOC. New York. 1986. P. 24Ц26. doi: 10.1145/318723.318728
 
 \bibitem{Dekang 1998}
-\textit{Lin D. }Automatic Retrieval and Clustering of Similar Words // Proceedings of the 17th international conference on Computational linguistics-Vol. 2. Ц  Department of Computer Science University of Manitoba Winnipeg, Manitoba, Canada, 1998, pp. 768-774. doi: 10.3115/980432.980696
+\textit{Lin D. }Automatic Retrieval and Clustering of Similar Words // Proceedings of the 17th international conference on Computational linguistics-Vol. 2. Ц  Department of Computer Science University of Manitoba Winnipeg, Manitoba, Canada, 1998, P. 768-774. doi: 10.3115/980432.980696
 
 \bibitem{Dekang 1993}
-\textit{Lin D. }Principle-based parsing without overgeneration // In Proceedings of ACL-93, Columbus, Ohio, 1993, pp. 112-120. doi: 10.3115/981574.981590
+\textit{Lin D. }Principle-based parsing without overgeneration // In Proceedings of ACL-93, Columbus, Ohio, 1993, P. 112-120. doi: 10.3115/981574.981590
 
 \bibitem{Dekang 1997}
-\textit{Lin D. }Using syntactic dependency as local context to resolve word sense ambiguity // In Proceedings of ACL/EACL-97, Madrid, Spain, July, 1997, pp. 64-71. doi: 10.3115/979617.979626
+\textit{Lin D. }Using syntactic dependency as local context to resolve word sense ambiguity // In Proceedings of ACL/EACL-97, Madrid, Spain, July, 1997, P. 64-71. doi: 10.3115/979617.979626
 
 
 \bibitem{Lin 2001}
-\textit{Lin D. and Pantel P. }Induction of semantic classes from natural language text // In Proceedings of SIGKDD-01. San Francisco, CA. 2001. pp. 317Ц322. doi: 10.1145/502512.502558  
+\textit{Lin D. and Pantel P. }Induction of semantic classes from natural language text // In Proceedings of SIGKDD-01. San Francisco, CA. 2001. P. 317Ц322. doi: 10.1145/502512.502558  
 
 \bibitem{Charles 1993}
-\textit{Ling Charles X.,  Marinov M. }Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs,  Cognition, Elsevier, 1993.
+\textit{Ling Charles X.,  Marinov M. }Answering the connectionist challenge: A symbolic model of learning the past tenses of English verbs /  Cognition, Elsevier, 1993.
 
 
 \bibitem{Manning 1999}
 \textit{Manning C. D. and  Sch\"utze H. }Foundations of Statistical Natural Language Processing / MIT Press. 1999.
 
 \bibitem{Merz 1998}
-\textit{Merz C. J. and  Murphy P. M. }UCI repository of machine learning databases, 1998. www.ics.uci.edu/ mlearn/MLRepository.html (дата обращени€: .......).
+\textit{Merz C. J. and  Murphy P. M. }UCI repository of machine learning databases, 1998. URL: www.ics.uci.edu/ mlearn/MLRepository.html (дата обращени€: 24.04.2015).
 
 \bibitem{Miller 1990}
 \textit{Miller G. }Wordnet: An on-line lexical database // International Journal of Lexicography, 3(4). 1990.
@@ -1214,13 +1214,13 @@ An Illustration of the Role of Bias in Machine Learning / Department of Computer
 \textit{Pantel P.,  Lin D. }Discovering Word Senses from Text / University of Alberta. Department of Computing Science Edmonton, Alberta T6H 2E1 Canada, 2002. doi: 10.1145/775047.775138
 
 \bibitem{Pedersen 2000}
-\textit{Pedersen T. }A Simple Approach to Building Ensembles of Naive Bayesian Classifers for Word Sense Disambiguation // Department of Computer Science, University of Minnesota Duluth. 2000.
+\textit{Pedersen T. }A Simple Approach to Building Ensembles of Naive Bayesian Classifers for Word Sense Disambiguation / Department of Computer Science, University of Minnesota Duluth. 2000.
 
 \bibitem{Pedersen 1997}
 \textit{Pedersen T. and  Bruce R. }Distinguishing word senses in untagged text / Proc.EMNLP.Providence, RI, 1997.
 
 \bibitem{Purandare 2004}
-\textit{ Purandare A. and  Pedersen T. }Improving word sense discrimination with gloss augmented feature vectors // Workshop on Lexical Resources for the Web and Word Sense Disambiguation. Ц 2004. Ц pp. 123-130. 
+\textit{ Purandare A. and  Pedersen T. }Improving word sense discrimination with gloss augmented feature vectors // Workshop on Lexical Resources for the Web and Word Sense Disambiguation.  2004.  P. 123-130. 
 
 \bibitem{Quinlan 1993}
 \textit{Quinlan J. R. }C4.5: Programs for Machine Learning / Morgan Kaufmann, 1993. 
@@ -1232,31 +1232,31 @@ An Illustration of the Role of Bias in Machine Learning / Department of Computer
 \textit{Savova G., Pedersen T., Purandare A., Kulkarni A. }Resolving ambiguities in biomedical text with unsupervised clustering approaches / University of Minnesota Supercomputing Institute Research Report, 2005.
                           
 \bibitem{Schapire 1998}
-\textit{Schapire R. E. and Singer Y. }Improved boosting a predictions // In Proceedings of the Eleventh Annual Confere Theory, 1998. pp. 80Ц91. 
+\textit{Schapire R. E. and Singer Y. }Improved boosting a predictions // In Proceedings of the Eleventh Annual Confere Theory, 1998. P. 80Ц91. 
 
 \bibitem{Schapire 1997}
-\textit{Schapire R. E. }Using output codes to boost multiclass learning problems. In Machine Learning // Proceedings of the Fourteenth International Conference, 1997. pp. 313Ц321. 
+\textit{Schapire R. E. }Using output codes to boost multiclass learning problems. In Machine Learning // Proceedings of the Fourteenth International Conference, 1997. P. 313Ц321. 
 
 \bibitem{Schutze 1998}
 \textit{Sch$\ddot{u}$tze H. }Automatic Word Sense Discrimination // Computational Linguistics, vol. 24, number 1., 1998.
 
 \bibitem{SC:website}
-\textit{SenseClusters. }  \newline http://senseclusters.sourceforge.net (дата обращени€: ..........).
+\textit{SenseClusters. }  \newline URL: http://senseclusters.sourceforge.net (дата обращени€: 24.04.2015).
 
 \bibitem{UMLS:website}
-\textit{UMLS Terminology Services (UTS).} http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращени€: ..........)
+\textit{UMLS Terminology Services (UTS).} URL: http://umlsks.nlm.nih.gov/kss/servlet/Turbine/\newline template (дата обращени€: 22.04.2015)
 
 \bibitem{VERONIS 1990}
-\textit{Veronis J. and Ide N. }Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries // Proceedings of the 13th International Conference on Computational Linguistics. Helsinki. 1990. pp. 389Ц394. doi: 10.3115/997939.998006
+\textit{Veronis J. and Ide N. }Word  sense  disambiguation  with  very  large neural  networks  extracted  from machine readable dictionaries // Proceedings of the 13th International Conference on Computational Linguistics. Helsinki. 1990. P. 389Ц394. doi: 10.3115/997939.998006
 
 \bibitem{WALTZ 1985}
-\textit{Waltz D. L. and  Pollack J. B. }Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation // Cognitive science. 1985. є 9. pp. 51Ц74. doi: 10.1207/s15516709cog0901\_4
+\textit{Waltz D. L. and  Pollack J. B. }Massively parallel parsing: a strongly interactive  model  of  natural  language interpretation // Cognitive science. 1985. є 9. P. 51Ц74. doi: 10.1207/s15516709cog0901\_4
                      
 \bibitem{Weeber 2001}
 \textit{Weeber M.,  Mork J.,  Aronson A. }Developing a test collection for biomedical word sense disambiguation / Proc. AMIA., 2001.
 
 \bibitem{Zhao 2002}
-\textit{Zhao Y. and  Karypis G. }Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. pp. 515-524. doi: 10.1145/584792.584877
+\textit{Zhao Y. and  Karypis G. }Evaluation of hierarchical clustering algorithms for document datasets // In Proceedings of the 11th International Conference on Information and Knowledge Management, McLean, VA, 2002. P. 515-524. doi: 10.1145/584792.584877
 
 
 
